--- a/doceditor/languages/lazde.de.po
+++ b/doceditor/languages/lazde.de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Swen Heinig <swen.heinig@freenet.de>\n"
+"Last-Translator: Swen Heinig <swen@heinig.email>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,6 +25,10 @@ msgstr "Alle hinzufügen"
 #: lazdemsg.sadddescriptionfile
 msgid "Select a new description file"
 msgstr "Neue Beschreibungsdatei wählen"
+
+#: lazdemsg.sadditionalparams
+msgid "Additional parameters for fpdoc"
+msgstr ""
 
 #: lazdemsg.sbuild
 msgctxt "lazdemsg.sbuild"
@@ -70,7 +74,7 @@ msgstr "Cont&ent-Datei erzeugen "
 
 #: lazdemsg.sdataforelement
 msgid "Documentation for element \"%s\":"
-msgstr "Dokumentation für Element »%s«:"
+msgstr "Dokumentation für Element \"%s\":"
 
 #: lazdemsg.sdelete
 msgid "&Delete"
@@ -78,15 +82,15 @@ msgstr "Löschen"
 
 #: lazdemsg.sdeletemodule
 msgid "Are you sure you want to delete module \"%s\" ?"
-msgstr "Wollen Sie das Modul »%s« wirklich löschen?"
+msgstr "Wollen Sie das Modul  \"%s\" wirklich löschen?"
 
 #: lazdemsg.sdeletepackage
 msgid "Are you sure you want to delete package \"%s\" ?"
-msgstr "Wollen Sie das sPackage »%s« wirklich löschen?"
+msgstr "Wollen Sie das sPackage \"%s\"  wirklich löschen?"
 
 #: lazdemsg.sdeletetopic
 msgid "Are you sure you want to delete topic \"%s\" ?"
-msgstr "Wollen Sie den Eintrag »%s« wirklich löschen?"
+msgstr "Wollen Sie den Eintrag \"%s\" wirklich löschen?"
 
 #: lazdemsg.sdescription
 msgid "Description"
@@ -106,23 +110,23 @@ msgstr "Das Anlegen schlug mit dem Code %d fehl. Prüfen Sie das Protokoll."
 
 #: lazdemsg.serrnomoduleforelement
 msgid "No module found to insert element \"%s\""
-msgstr "Kein Modul gefunden um Element »%s« einzufügen"
+msgstr "Kein Modul gefunden, um Element \"%s\" einzufügen"
 
 #: lazdemsg.serrnonodeformodule
 msgid "No node found for module \"%s\""
-msgstr "Kein Knoten für das Modul »%s« gefunden"
+msgstr "Kein Knoten für das Modul \"%s\" gefunden"
 
 #: lazdemsg.serrnonodeforpackage
 msgid "No node found for package \"%s\""
-msgstr "Kein Knoten für das Package »%s« gefunden"
+msgstr "Kein Knoten für das Package \"%s\" gefunden"
 
 #: lazdemsg.serrnonodefortopic
 msgid "No parent node found to insert topic \"%s\""
-msgstr "Kein Elternknoten für das Einfügen des Eintrags »%s« gefunden"
+msgstr "Kein Elternknoten für das Einfügen des Eintrags \"%s\" gefunden"
 
 #: lazdemsg.serrnopackageformodule
 msgid "No package found to insert module \"%s\""
-msgstr "Kein Package gefunden um Modul »%s« einzufügen"
+msgstr "Kein Package gefunden, um Modul \"%s\" einzufügen"
 
 #: lazdemsg.serrors
 msgid "Errors"
@@ -130,11 +134,11 @@ msgstr "Fehler"
 
 #: lazdemsg.serrunknowndomelement
 msgid "Unknwon DOM element as parent for selected element: \"%s\""
-msgstr "Unbekanntes DOM-Element als Vorgänger des gewählten Elements: »%s«"
+msgstr "Unbekanntes DOM-Element als Vorgänger des gewählten Elements: \"%s\""
 
 #: lazdemsg.sfilemodified
 msgid "Document \"%s\" was modified, would you like to save it?"
-msgstr "Dokument »%s« wurde verändert, wollen Sie es speichern?"
+msgstr "Dokument \"%s\" wurde verändert, wollen Sie es speichern?"
 
 #: lazdemsg.sfilestructure
 msgid "Documentation structure"
@@ -162,8 +166,8 @@ msgstr " im Package"
 
 #: lazdemsg.sfortopic
 #, fuzzy
-#| msgid " in topic "
-msgid " in topic"
+#| msgid " in topic"
+msgid " in topic "
 msgstr " im Eintrag"
 
 #: lazdemsg.shideprotectedmethods
@@ -227,6 +231,11 @@ msgstr "Unterstrichen"
 msgid "Variable"
 msgstr "Variable"
 
+#: lazdemsg.shintinsertbulletedlist
+msgctxt "lazdemsg.shintinsertbulletedlist"
+msgid "Insert bulleted list"
+msgstr ""
+
 #: lazdemsg.shintinsertelement
 msgctxt "lazdemsg.shintinsertelement"
 msgid "New element"
@@ -241,6 +250,11 @@ msgstr "Link einfügen"
 msgctxt "lazdemsg.shintinsertmodule"
 msgid "New module"
 msgstr "Neues Modul"
+
+#: lazdemsg.shintinsertnumberedlist
+msgctxt "lazdemsg.shintinsertnumberedlist"
+msgid "Insert numbered list"
+msgstr ""
 
 #: lazdemsg.shintinsertpackage
 msgctxt "lazdemsg.shintinsertpackage"
@@ -291,10 +305,24 @@ msgstr "Über dieses Programm"
 msgid "Import content file"
 msgstr "Content-Datei importieren"
 
+#: lazdemsg.sinsertbulletedlist
+msgctxt "lazdemsg.sinsertbulletedlist"
+msgid "Insert bulleted list"
+msgstr ""
+
+#: lazdemsg.sinsertexamplecode
+msgid "Insert example code"
+msgstr ""
+
 #: lazdemsg.sinsertlink
 msgctxt "lazdemsg.sinsertlink"
 msgid "Insert link"
 msgstr "Link einfügen"
+
+#: lazdemsg.sinsertnumberedlist
+msgctxt "lazdemsg.sinsertnumberedlist"
+msgid "Insert numbered list"
+msgstr ""
 
 #: lazdemsg.sinsertprintshortlink
 msgid "Insert short description link"
@@ -305,6 +333,10 @@ msgctxt "lazdemsg.sinserttable"
 msgid "Insert table"
 msgstr "Tabelle einfügen"
 
+#: lazdemsg.sitemscount
+msgid "Items count"
+msgstr ""
+
 #: lazdemsg.slazdoceditor
 msgid "Lazarus Documentation Editor"
 msgstr "Lazarus-Dokumentations-Editor"
@@ -312,6 +344,14 @@ msgstr "Lazarus-Dokumentations-Editor"
 #: lazdemsg.slinksto
 msgid " links to "
 msgstr "verweist auf"
+
+#: lazdemsg.slinktarget
+msgid "Link target"
+msgstr ""
+
+#: lazdemsg.slinktext
+msgid "Link text"
+msgstr ""
 
 #: lazdemsg.sload
 msgid "&Load"
@@ -440,6 +480,10 @@ msgstr "Über"
 msgid "&Insert"
 msgstr "E&infügen"
 
+#: lazdemsg.smenuinsertbulletedlist
+msgid "Bulleted list"
+msgstr ""
+
 #: lazdemsg.smenuinsertelement
 msgid "&Element"
 msgstr "&Element"
@@ -448,9 +492,17 @@ msgstr "&Element"
 msgid "&Link"
 msgstr "&Link"
 
+#: lazdemsg.smenuinsertlist
+msgid "List"
+msgstr ""
+
 #: lazdemsg.smenuinsertmodule
 msgid "&Module"
 msgstr "&Modul"
+
+#: lazdemsg.smenuinsertnumberedlist
+msgid "Numbered list"
+msgstr ""
 
 #: lazdemsg.smenuinsertpackage
 msgctxt "lazdemsg.smenuinsertpackage"
@@ -517,6 +569,10 @@ msgstr "Neues Package"
 msgctxt "lazdemsg.snewtopic"
 msgid "New topic"
 msgstr "Neuer Eintrag"
+
+#: lazdemsg.snodename
+msgid "Node name"
+msgstr ""
 
 #: lazdemsg.snoelement
 msgid "No element selected"
@@ -616,6 +672,10 @@ msgctxt "lazdemsg.ssave"
 msgid "&Save"
 msgstr "&Speichern"
 
+#: lazdemsg.ssavebeforebuildquestion
+msgid "You have unsaved changes in \"%s\".%sThey should be saved in order to be visible in built documentation. Save them?"
+msgstr ""
+
 #: lazdemsg.sseealso
 msgid "See Also"
 msgstr "Siehe auch"
@@ -629,7 +689,9 @@ msgid "Select output file name"
 msgstr "Ausgabedateiname festlegen"
 
 #: lazdemsg.sselectsometext
-msgid "Select some text"
+#, fuzzy
+#| msgid "Select some text"
+msgid "Select some text."
 msgstr "Etwas Text auswählen"
 
 #: lazdemsg.sshortdescription
@@ -655,6 +717,18 @@ msgstr "Quellen"
 #: lazdemsg.sstartnodenotfound
 msgid "Start element \"%s\" could not be found"
 msgstr "Startelement \"%s\" nicht gefunden"
+
+#: lazdemsg.stablecols
+msgid "Columns"
+msgstr ""
+
+#: lazdemsg.stableheader
+msgid "Use header row"
+msgstr ""
+
+#: lazdemsg.stablerows
+msgid "Rows"
+msgstr ""
 
 #: lazdemsg.stargetos
 msgid "Target OS"
